# lapce-volt-template

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  volt.toml
.cargo/: config.toml
.lapce/: run.toml  settings.toml
src/: main.rs
